# sclerp-planner

./: .gitignore  CMakeLists.txt  README.md
cmake/: SclerpCommon.cmake
collision/: CMakeLists.txt
collision/bench/: collision_benchmark.cpp  obstacle_broadphase_benchmark.cpp
collision/cmake/: sclerp_collisionConfig.cmake.in
collision/include/sclerp/collision/: avoidance.hpp  collision.hpp  collision_utils.hpp  lemke.hpp  motion_plan.hpp  motion_plan_collision.hpp  robot_link_meshes.hpp  types.hpp
collision/src/: avoidance.cpp  collision.cpp  collision_utils.cpp  contact_compute_internal.hpp  lemke.cpp  motion_plan_collision.cpp  obstacle_broadphase.cpp  obstacle_broadphase.hpp  robot_link_meshes.cpp
collision/tests/: compat_test.cpp  kinlib_compat_test.cpp  unit_test.cpp
core/: CMakeLists.txt
core/bench/: perf_benchmark.cpp
core/cmake/: sclerp_coreConfig.cmake.in
core/include/sclerp/core/: constraints.hpp  export.hpp  interpolate.hpp  lie.hpp  planner.hpp  trajectory.hpp  types.hpp
core/include/sclerp/core/common/: constants.hpp  logger.hpp  status.hpp
core/include/sclerp/core/dual_quat/: dual_quat.hpp
core/include/sclerp/core/kinematics/: kinematics_solver.hpp
core/include/sclerp/core/math/: adjoint.hpp  distance.hpp  se3.hpp  so3.hpp  svd.hpp  types.hpp
core/include/sclerp/core/model/: manipulator_model.hpp
core/include/sclerp/core/path/: joint_path.hpp
core/include/sclerp/core/planning/: failure_dump_guard.hpp  failure_log.hpp  motion_plan.hpp
core/include/sclerp/core/screw/: screw.hpp
core/include/sclerp/core/trajectory/: joint_trajectory.hpp
core/src/: adjoint.cpp  distance.cpp  dual_quat.cpp  failure_dump_guard.cpp  failure_log.cpp  interpolate.cpp  kinematics_solver.cpp  lie.cpp  logger.cpp  manipulator_model.cpp  motion_plan.cpp  planner.cpp  screw.cpp  se3.cpp  so3.cpp  svd.cpp  types.cpp
core/tests/: smoke_test.cpp
examples/: CMakeLists.txt
examples/assets/diana7/: README.md
examples/assets/diana7/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL
examples/assets/diana7/urdf/: diana_robot.urdf
examples/src/: example_1_no_obstacles_gazebo.cpp  example_2_hardcoded_obstacles_gazebo.cpp  example_3_scene_roundtrip_gazebo.cpp  example_common.cpp  example_common.hpp
gazebo/: CMakeLists.txt
gazebo/cmake/: sclerp_gazeboConfig.cmake.in
gazebo/include/sclerp/gazebo/: joint_trajectory_csv.hpp  obstacle_registry.hpp  world_registry.hpp  world_sdf.hpp
gazebo/src/: generate_world_cli.cpp  joint_trajectory_csv.cpp  joint_trajectory_player_ignition.cpp  obstacle_registry.cpp  obstacle_registry_io.cpp  primitive_resizer_ignition.cpp  visualize_failure_dump_cli.cpp  world_registry.cpp  world_registry_io.cpp  world_sdf_saver_ignition.cpp
gazebo/tests/: unit_test.cpp
python/: CMakeLists.txt  README.md
python/scripts/: example_1_no_obstacles_gazebo.py  example_2_hardcoded_obstacles_gazebo.py  example_3_scene_roundtrip_gazebo.py  example_common.py  visualize_failure_dump_gazebo.py
python/src/: bind_collision.cpp  bind_common.hpp  bind_core.cpp  bind_gazebo.cpp  bind_trajectory.cpp  bind_urdf.cpp  module.cpp
trajectory/: CMakeLists.txt
trajectory/cmake/: sclerp_trajectoryConfig.cmake.in
trajectory/include/sclerp/trajectory/: interpolator.hpp
trajectory/src/: common.cpp  csv.cpp  grid_totg.cpp  toppra.cpp
trajectory/src/detail/: interpolator_common.hpp
trajectory/tests/: unit_test.cpp
urdf/: CMakeLists.txt
urdf/include/sclerp/urdf/: load_manipulator.hpp
urdf/src/: load_manipulator.cpp
urdf/tests/: urdf_kinematics_test.cpp
